--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.5.9"
   },
   "version": "0.1.0",
   "devDependencies": {
