--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "goenbako",
   "private": true,
   "dependencies": {
+    "@mdi/font": "^6.2.95",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "axios": "^0.22.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.5.9"
+    "vuetify": "^2.5.9",
+    "vuex": "^3.6.2"
   },
   "version": "0.1.0",
   "devDependencies": {
