--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "^8.0.1",
+    "eslint-plugin-vue": "^7.19.1",
     "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "lint": "eslint --ext .js,.vue app/javascript",
+    "lint-fix": "eslint --fix --ext .js,.vue app/javascript"
   }
 }
