--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.9",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
