--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "eslint": "^8.0.1",
     "eslint-plugin-vue": "^7.19.1",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "engines": {
     "node": "14.17.6"
