--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ yarn-debug.log*
 /config/database.yml
 
 /config/credentials/production.key
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
