Add:twitterコールバック先の正式なURLを指定

--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,2 +1,2 @@
 sorcery:
-  callback_url: 'https://goenbako.herokuapp.com/api/oauth/callback?provider=twitter'
+  callback_url: 'https://goenbako.com/api/oauth/callback?provider=twitter'
