--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^3.0.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
+    "vue-gtag": "^1.16.1",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
