--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.22.0",
     "js-cookie": "^3.0.1",
     "turbolinks": "^5.2.0",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-gtag": "^1.16.1",
     "vue-loader": "^15.9.8",
