--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.14",
     "vue-gtag": "^1.16.1",
     "vue-loader": "^15.9.8",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.9",
