--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@mdi/js": "^6.5.95",
     "eslint": "^8.0.1",
     "eslint-plugin-vue": "^7.19.1",
     "webpack-dev-server": "^3.11.0"
