--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "goenbako",
   "private": true,
   "dependencies": {
-    "@mdi/js": "^6.5.95",
     "@mdi/font": "^6.2.95",
+    "@mdi/js": "^6.5.95",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -15,6 +15,7 @@
     "vue": "^2.6.14",
     "vue-gtag": "^1.16.1",
     "vue-loader": "^15.9.8",
+    "vue-loading-template": "^1.3.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
